@@ -34,6 +34,9 @@
   - Content of notes elements are not displayed correctly with Xliff filter
   https://sourceforge.net/p/omegat/bugs/1192/
 
+  - Error when trying to backup the project file on Windows
+  https://sourceforge.net/p/omegat/bugs/1166/
+
 ----------------------------------------------------------------------
  OmegaT 6.0.0 (2023-06-22)
 ----------------------------------------------------------------------
